--- a/cv.html
+++ b/cv.html
@@ -13,54 +13,51 @@
 
 </head>
 <body>
-    <section id="profile" class="container">
-        <span id="img-placeholder"></span>
-        <h1 id="name">Marius <br> Langeland</h1>
-        <span id="profession">Digital Utvikler</span>
-
-        <div id="contact">
-            <h3>Kontakt</h3>
-            <span id="phone">+47 94 97 91 88</span>
-            <span id="website">examplewebsite.com</span>
-            <span id="email">mariuslangeland.ml@gmail.com</span>
-            <span id="area">1354 Bærums Verk</span>
-            <span id="address">Jansveien 18</span>
-        </div>
-
-        <div id="about">
-            <h3>Om meg</h3>
-            <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima officia qui ut reprehenderit quam hic nihil dolorem at quos id. Neque tenetur magnam consequuntur corrupti iusto optio fugit officia laborum?</span>
-        </div>
-    </section>
-
-    <section id="cv">
-        <div id="experience">
-            <h3>Erfaring</h3>
-            <span class="title">Lagermedarbeider</span>
-            <span class="organization">Bohus Design</span>
-            <span class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod neque dignissimos deserunt labore.
-            </span>
-        </div>
+    <section class="cv-wrapper">
+        <section id="profile" class="container">
+            <span id="img-placeholder"></span>
+            <h1 id="name">Marius <br> Langeland</h1>
+            <span id="profession">Digital Utvikler</span>
+            <div id="contact">
+                <h3>Kontakt</h3>
+                <span id="phone">+47 94 97 91 88</span>
+                <span id="website">examplewebsite.com</span>
+                <span id="email">mariuslangeland.ml@gmail.com</span>
+                <span id="area">1354 Bærums Verk</span>
+                <span id="address">Jansveien 18</span>
+            </div>
+            <div id="about">
+                <h3>Om meg</h3>
+                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima officia qui ut reprehenderit quam hic nihil dolorem at quos id. Neque tenetur magnam consequuntur corrupti iusto optio fugit officia laborum?</span>
+            </div>
+        </section>
+        <section id="cv">
+            <div id="experience">
+                <h3>Erfaring</h3>
+                <span class="title">Lagermedarbeider</span>
+                <span class="organization">Bohus Design</span>
+                <span class="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod neque dignissimos deserunt labore.
+                </span>
+            </div>
         
-        <div id="title">
-            <h3>Utdanning</h3>
-            <span class="title">Informasjonsteknologi</span>
-            <span class="organization">Røyken videregående skole</span>
-            <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo magni vitae explicabo.</span>
-        </div>
-
-        <div id="competencies">
-            <h3>Kompetanser</h3>
-            <span class="lang">C#<span class="langdesc"> - .NET</span></span>
-            <span class="lang">WEB<span class="langdesc"> - CSS, HTML, JS</span></span>
-        </div>
-
-        <div id="languages">
-            <h3>Språk</h3>
-            <span class="lang">Norsk<span class="langdesc"> - morsmål</span></span>
-            <span class="lang">Engelsk<span class="langdesc"> - flytende</span></span>
-        </div>
+            <div id="title">
+                <h3>Utdanning</h3>
+                <span class="title">Informasjonsteknologi</span>
+                <span class="organization">Røyken videregående skole</span>
+                <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo magni vitae explicabo.</span>
+            </div>
+            <div id="competencies">
+                <h3>Kompetanser</h3>
+                <span class="lang">C#<span class="langdesc"> - .NET</span></span>
+                <span class="lang">WEB<span class="langdesc"> - CSS, HTML, JS</span></span>
+            </div>
+            <div id="languages">
+                <h3>Språk</h3>
+                <span class="lang">Norsk<span class="langdesc"> - morsmål</span></span>
+                <span class="lang">Engelsk<span class="langdesc"> - flytende</span></span>
+            </div>
+        </section>
     </section>
 
     <footer>
