--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
         <section id="profile" class="container">
             <span id="img-placeholder"></span>
             <h1 id="name">Marius <br> Langeland</h1>
-            <span id="profession">Digital Utvikler</span>
+            <span id="profession">Utviklingstudent</span>
             <div id="contact">
                 <h3>Kontakt</h3>
                 <span id="phone">+47 94 97 91 88</span>
@@ -28,24 +28,26 @@
             </div>
             <div id="about">
                 <h3>Om meg</h3>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima officia qui ut reprehenderit quam hic nihil dolorem at quos id. Neque tenetur magnam consequuntur corrupti iusto optio fugit officia laborum?</span>
+                <span>Aspirerende spillutvikler.<br>
+                Liker programmering, problemløsning og kreativ utvikling</span>
             </div>
         </section>
         <section id="cv">
             <div id="experience">
                 <h3>Erfaring</h3>
                 <span class="title">Lagermedarbeider</span>
-                <span class="organization">Bohus Design</span>
+                <span class="organization">Bohus Design 2019 - d.d</span>
                 <span class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod neque dignissimos deserunt labore.
+                    Oppretthold av sortiment, utlevering og kunderservice.
                 </span>
             </div>
         
             <div id="title">
                 <h3>Utdanning</h3>
                 <span class="title">Informasjonsteknologi</span>
-                <span class="organization">Røyken videregående skole</span>
-                <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo magni vitae explicabo.</span>
+                <span class="organization">Røyken videregående skole 2021 - d.d</span>
+                <span class="description">IT & Medieproduksjon (år 1) <br>
+                Informasjonsteknologi (år 2)</span>
             </div>
             <div id="competencies">
                 <h3>Kompetanser</h3>
