--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
 <body>
     <section class="cv-wrapper">
         <section id="profile" class="container">
-            <span id="img-placeholder"></span>
+            <span id="img-placeholder">*profilbilde*</span>
             <h1 id="name">Marius <br> Langeland</h1>
             <span id="profession">Utviklingstudent</span>
             <div id="contact">
