Added period at end of sentence

--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
             <div id="about">
                 <h3>Om meg</h3>
                 <span>Aspirerende spillutvikler.<br>
-                Liker programmering, problemløsning og kreativ utvikling</span>
+                Liker programmering, problemløsning og kreativ utvikling.</span>
             </div>
         </section>
         <section id="cv">
