--- a/cv.html
+++ b/cv.html
@@ -15,24 +15,28 @@
 <body>
     <section class="cv-wrapper">
         <section id="profile" class="container">
-            <span id="img-placeholder">*profilbilde*</span>
-            <h1 id="name">Marius <br> Langeland</h1>
-            <span id="profession">Utviklingstudent</span>
-            <div id="contact">
-                <h3>Kontakt</h3>
-                <span id="phone">+47 94 97 91 88</span>
-                <span id="website">examplewebsite.com</span>
-                <span id="email">mariuslangeland.ml@gmail.com</span>
-                <span id="area">1354 Bærums Verk</span>
-                <span id="address">Jansveien 18</span>
-            </div>
-            <div id="about">
-                <h3>Om meg</h3>
-                <span>Aspirerende spillutvikler.<br>
-                Liker programmering, problemløsning og kreativ utvikling.</span>
+            <div id="background">
+                <div id="head">
+                    <span id="img-placeholder">*profilbilde*</span>
+                    <h1 id="name">Marius <br> Langeland</h1>
+                    <span id="profession">Utviklingstudent</span>
+                </div>
+                <div id="contact">
+                    <h3>Kontakt</h3>
+                    <span id="phone">+47 94 97 91 88</span>
+                    <span id="website">examplewebsite.com</span>
+                    <span id="email">mariuslangeland.ml@gmail.com</span>
+                    <span id="area">1354 Bærums Verk</span>
+                    <span id="address">Jansveien 18</span>
+                </div>
+                <div id="about">
+                    <h3>Om meg</h3>
+                    <span>Aspirerende spillutvikler.<br>
+                    Liker programmering, problemløsning og kreativ utvikling.</span>
+                </div>
             </div>
         </section>
-        <section id="cv">
+        <section id="qualifications">
             <div id="experience">
                 <h3>Erfaring</h3>
                 <span class="title">Lagermedarbeider</span>
