--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
                 Informasjonsteknologi (år 2)</span>
             </div>
             <div id="competencies">
-                <h3>Kompetanser</h3>
+                <h3>Kompetanse</h3>
                 <span class="lang">C#<span class="langdesc"> - .NET</span></span>
                 <span class="lang">WEB<span class="langdesc"> - CSS, HTML, JS</span></span>
             </div>
