--- a/cv.html
+++ b/cv.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <section class="cv-wrapper">
@@ -34,9 +37,25 @@
                     <span>Aspirerende spillutvikler.<br>
                     Liker programmering, problemløsning og kreativ utvikling.</span>
                 </div>
+
+                <div id="socials">
+
+                </div>
             </div>
         </section>
         <section id="qualifications">
+            <div id="title">
+                <h3>Utdanning</h3>
+                <span class="title">Informasjonsteknologi</span>
+                <span class="organization">Røyken videregående skole 2021 - d.d</span>
+                <span class="description">IT & Medieproduksjon (år 1) <br>
+                Informasjonsteknologi (år 2)</span>
+                <div class="vertical-indent"></div>
+                <span class="title">Spilldesign</span>
+                <span class="organization">Bjerkely folkehøyskole <br> 2017 - 2018</span>
+                <span class="description">Animasjon, programmering og design i Unity spillmotor.</span>
+            </div>
+
             <div id="experience">
                 <h3>Erfaring</h3>
                 <span class="title">Lagermedarbeider</span>
@@ -46,22 +65,21 @@
                 </span>
             </div>
         
-            <div id="title">
-                <h3>Utdanning</h3>
-                <span class="title">Informasjonsteknologi</span>
-                <span class="organization">Røyken videregående skole 2021 - d.d</span>
-                <span class="description">IT & Medieproduksjon (år 1) <br>
-                Informasjonsteknologi (år 2)</span>
-            </div>
             <div id="competencies">
                 <h3>Kompetanse</h3>
                 <span class="lang">C#<span class="langdesc"> - .NET</span></span>
-                <span class="lang">WEB<span class="langdesc"> - CSS, HTML, JS</span></span>
+                <span class="lang">Web<span class="langdesc"> - CSS, HTML, JS</span></span>
+                <span class="lang">Software<span class="langdesc"> - MS Office</span></span>
             </div>
             <div id="languages">
                 <h3>Språk</h3>
                 <span class="lang">Norsk<span class="langdesc"> - morsmål</span></span>
                 <span class="lang">Engelsk<span class="langdesc"> - flytende</span></span>
+            </div>
+            <div id="references">
+                <h3>Referanser</h3>
+                <span class="reference">Example<span class="relationship"> - kontaktlærer</span></span>
+                <span class="reference">Example<span class="relationship"> - nærmeste overordne</span></span>
             </div>
         </section>
     </section>
