--- a/cv.html
+++ b/cv.html
@@ -22,11 +22,11 @@
                 <div id="head">
                     <span id="img-placeholder">*profilbilde*</span>
                     <h1 id="name">Marius <br> Langeland</h1>
-                    <span id="profession">Utviklingstudent</span>
+                    <span id="profession">Skoleelev</span>
                 </div>
                 <div id="contact">
                     <h3>Kontakt</h3>
-                    <span id="phone">+47 94 97 91 88</span>
+                    <span id="phone">+47 949 79 188</span>
                     <span id="website">examplewebsite.com</span>
                     <span id="email">mariuslangeland.ml@gmail.com</span>
                     <span id="area">1354 Bærums Verk</span>
@@ -39,7 +39,6 @@
                 </div>
 
                 <div id="socials">
-
                 </div>
             </div>
         </section>
