--- a/resources/cv.html
+++ b/resources/cv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marius Langeland</title>
+    <title>CV - Marius Langeland</title>
     <link rel="stylesheet" href="cv.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
                 <div id="about">
                     <h3>Om meg</h3>
                     <span>Aspirerende spillutvikler.<br>
-                    Liker programmering, problemløsning og kreativ utvikling.</span>
+                    Liker programmering, problemløsning og kreativ utvikling. <br><br> Jeg er glad i å være hjelpsom og liker å fokusere på det positive i livet.</span>
                 </div>
 
                 <div id="socials">
@@ -77,7 +77,7 @@
             </div>
             <div id="references">
                 <h3>Referanser</h3>
-                <span class="reference">Example<span class="relationship"> - kontaktlærer</span></span>
+                <span class="reference">Bartozs Ruszer<span class="relationship"> - kontaktlærer</span></span>
                 <span class="reference">Example<span class="relationship"> - nærmeste overordne</span></span>
             </div>
         </section>
