--- a/resources/cv.html
+++ b/resources/cv.html
@@ -60,7 +60,7 @@
                 <span class="title">Lagermedarbeider</span>
                 <span class="organization">Bohus Design 2019 - d.d</span>
                 <span class="description">
-                    Oppretthold av sortiment, utlevering og kunderservice.
+                    Oppretthold av sortiment, utlevering og kundeservice.
                 </span>
             </div>
         
