Added click to highlight function

--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -7,6 +7,7 @@
     <title>Retorikk</title>
 
     <link rel="stylesheet" href="/Notes/rhetoric.css">
+    <script src="/Notes/rhetoric.js"></script>
 </head>
 <body>
     <h1>Retorikk</h1>
@@ -92,7 +93,5 @@
         <span>Kjøp skoene mine fordi...</span>
         <p><span data-reference="pathos">Jeg er ikke en person som liker å kaste bort ting som egentlig er helt fine å bruke</span>, <span data-reference="logos">nå som jeg har mistet begge mine bein så leter jeg etter noen som kunne ta dem over</span>. Jeg kjøpte disse skoene for noen måneder siden, og på den tiden følte de helt magisk å bruke. <span data-reference="logos">De er komfortable og veier lite, og gir deg en gunstig spenst</span>. Jeg ville anbefalt at du tok dem, fordi de er tilbydt for en billig penge.</p>
     </div>
-
-
 </body>
 </html>
