--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retorikk</title>
 
-    <link rel="stylesheet" href="/Notes/rhetoric.css">
-    <script src="/Notes/rhetoric.js"></script>
+    <link rel="stylesheet" href="rhetoric.css">
+    <script src="rhetoric.js"></script>
 </head>
 <body>
     <section>
