Made argument class match term class

--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -15,6 +15,7 @@
         <div class="introduction">
             Kunsten om å overbevise
         </div>
+        <div class="line"></div>
         
         <div class="term" id="pathos">
             <h3>Patos</h3>
