--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -20,34 +20,38 @@
         <div class="term" id="pathos">
             <h3>Patos</h3>
             <span class="synonyms">
-                Følelser
+                Argument fra følelser
             </span>
             <span class="stems-from">
+                Kilder: <br>
                 Bilder, Språklige virkemidler, Humor
             </span>
         </div>
         <div class="term" id="logos">
             <h3>Logos</h3>
             <span class="synonyms">
-                Fornuft
+                Argument fra fornuft
             </span>
             <span class="stems-from">
+                
             </span>
         </div>
         <div class="term" id="ethos">
             <h3>Etos</h3>
             <span class="synonyms">
-                Karakter, Troverdighet
+                Argument fra troverdighet
             </span>
             <span class="stems-from">
-                Verdier, Autensitet, Utdanning
+                Kilder: <br>
+                Verdier, Autensitet, Utdanning, Status
             </span>
             <span class="explanation">
             </span>
         </div>
         <div class="term" id="kairos">
             <h3>Kairos</h3>
-            <span class="explanation">Hvem som velger, og hvorfor og hvordan kommunikasjonsformen er valgt, og når det skjer.</span>
+            <span class="explanation">
+                Hvem, når, hvor, hvorfor.</span>
         </div>
         
         <div class="term" id="sender">
