--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -20,7 +20,7 @@
         <div class="term" id="pathos">
             <h3>Patos</h3>
             <span class="synonyms">
-                Argument fra følelser
+                Appellerer til følelser
             </span>
             <span class="stems-from">
                 Kilder: <br>
@@ -30,7 +30,7 @@
         <div class="term" id="logos">
             <h3>Logos</h3>
             <span class="synonyms">
-                Argument fra fornuft
+                Appellerer til fornuft
             </span>
             <span class="stems-from">
                 
@@ -39,7 +39,7 @@
         <div class="term" id="ethos">
             <h3>Etos</h3>
             <span class="synonyms">
-                Argument fra troverdighet
+                Appelerer til troverdighet
             </span>
             <span class="stems-from">
                 Kilder: <br>
@@ -51,7 +51,7 @@
         <div class="term" id="kairos">
             <h3>Kairos</h3>
             <span class="explanation">
-                Hvem, når, hvor, hvorfor.</span>
+                Når, hvor og hvorfor et argument tar stede, og hvem som argumenterer.
         </div>
         
         <div class="term" id="sender">
@@ -67,17 +67,29 @@
         </div>
         <div class="term" id="message">
             <h3>Budskap</h3>
-            <span class="explanation">Et utfall av kommunikasjon som uttrykker en mening.</span>
+            <span class="explanation">Stammer fra kommunikasjon som uttrykker en mening.</span>
             <span class="example"></span>
         </div>
         <div class="term" id="purpose">
             <h3>Formål</h3>
-            <span class="explanation">Grunnen en person eller gruppe har til å spre et budskap.</span>
+            <span class="explanation">Grunnen avsenderen har for sitt budskap.</span>
         </div>
         <div class="argument" id="shoe-salesman">
             <h3>Argument</h3>
             <span>Kjøp skoene mine fordi...</span>
-            <p><span data-reference="pathos">Jeg er ikke en person som liker å kaste bort ting som egentlig er helt fine å bruke</span>, <span data-reference="logos">nå som jeg har mistet begge mine bein så leter jeg etter noen som kunne ta dem over</span>. Jeg kjøpte disse skoene for noen måneder siden, og på den tiden følte de helt magisk å bruke. <span data-reference="logos">De er komfortable og veier lite, og gir deg en gunstig spenst</span>. Jeg ville anbefalt at du tok dem, fordi de er tilbydt for en billig penge.</p>
+            <p><span data-reference="ethos">Jeg er ikke en person som liker å kaste bort ting som egentlig er helt fine å bruke</span>, <span data-reference="pathos">nå som jeg har mistet begge mine bein så leter jeg etter noen som kunne ta dem over</span>. Jeg kjøpte disse skoene for noen måneder siden, og på den tiden følte de helt magisk å bruke. <span data-reference="logos">De er komfortable og veier lite, og gir deg en gunstig spenst</span>. Jeg ville anbefalt at du tok dem, fordi de er tilbydt for en billig penge.</p>
+        </div>
+
+        <div class="argument" id="early-school">
+            <h3>Argument</h3>
+            <span>Skoledagen burde begynne senere</span>
+            <p data-reference="pathos">
+                Skoleelever i dag har mye å tenke på. 
+            </p>
+
+            <p data-reference="logos">
+                Om skolen starter en time senere kan vi kan redusere mengden foreldre som har tid til å kjøre barna sine til skolen, som kan føre til mindre trafikk og økt sikkerhet for myke trafikanter rundt skoleområder. Barn vil ta muligheten til å gå eller sykle til skolen, som vil ha et positivt utfall for samfunnets helse og velferd.
+            </p>
         </div>
     </section>
 </body>
