--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -82,9 +82,9 @@
 
         <div class="argument" id="early-school">
             <h3>Argument</h3>
-            <span>Skoledagen burde begynne senere</span>
+            <span>Skoledagen burde begynne senere fordi...</span>
             <p data-reference="pathos">
-                Skoleelever i dag har mye å tenke på. 
+                Skoleelever i dag har mye å tenke på, 
             </p>
 
             <p data-reference="logos">
