--- a/Notes/rhetoric.html
+++ b/Notes/rhetoric.html
@@ -58,12 +58,14 @@
             <h3>Avsender</h3>
             <span class="explanation">Person eller gruppe som formulerer et budskap.</span>
         
-            <span class="example"></span>
+            <span class="example">En person som holder en tale</span>
         </div>
         <div class="term" id="receiver">
             <h3>Mottaker</h3>
             <span class="explanation">Person eller gruppe som mottar et budskap og lager konklusjoner fra det.</span>
-            <span class="example"></span>
+            <span class="example">
+                En person som leser et debattinnlegg
+            </span>
         </div>
         <div class="term" id="message">
             <h3>Budskap</h3>
@@ -92,7 +94,7 @@
             </p>
         </div>
 
-        
+
     </section>
 </body>
 </html>
