Updated title, added background color

--- a/Rykkinn-hundeklubb/index.html
+++ b/Rykkinn-hundeklubb/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <header>
+        <span>Om RHK</span>
 
     </header>
     
     <section class="main">
-        <h1>Asker hundeklubb</h1>
+        <h1>Rykkinn hundeklubb</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sapiente nobis autem est ipsum! Laudantium assumenda totam nam dolore quos necessitatibus esse eaque deleniti iure. Ex enim vitae officia at!</p>
         
         <div class="activities">
