--- a/Rykkinn-hundeklubb/index.html
+++ b/Rykkinn-hundeklubb/index.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <span>Om RHK</span>
-
-    </header>
-    
     <section class="main">
+        <nav>
+            <span>Om RHK</span>
+            <span>Trening</span>
+            <span>Kurs</span>
+            <span>Linker</span>
+            <span>Kontakt oss</span>
+        </nav>
+
         <h1>Rykkinn hundeklubb</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sapiente nobis autem est ipsum! Laudantium assumenda totam nam dolore quos necessitatibus esse eaque deleniti iure. Ex enim vitae officia at!</p>
         
